# MPGL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  Makefile  Makefile.save  Project Epsilon.cbp  README.md  glad.c  main.cpp  nv  shaders.gzsl
examples/Snake/: snake.cpp
examples/Snake/include/: Snake.hpp  World.hpp
examples/Snake/src/: Snake.cpp  World.cpp
include/MPGL/: 2DGraphics.hpp  MPGL.hpp
include/MPGL/Collections/: Bitmap.hpp  Canva.hpp  Canva.tpp  CircularList.hpp  CircularList.tpp  Image.hpp  Image.ipp  Image.tpp  MinHeap.hpp  MinHeap.tpp  PriorityQueue.hpp  PriorityQueue.tpp
include/MPGL/Compression/: GZIPDecoder.hpp  GZIPDecoder.tpp  HuffmanTree.hpp  HuffmanTree.tpp  Inflate.hpp  Inflate.tpp  ZlibDecoder.hpp  ZlibDecoder.tpp
include/MPGL/Concurrency/: Monitor.hpp  Monitor.tpp  QueueMonitor.hpp  QueueMonitor.tpp  Task.hpp  Task.tpp  Threadpool.hpp  Threadpool.tpp
include/MPGL/Core/: Color.hpp  DimensionTraits.hpp  Dimensions.hpp  Drawable.hpp  DrawableCollection.hpp  DrawableCollection.tpp  DrawableTraits.hpp  Model.hpp  Shape.hpp
include/MPGL/Events/: Event.hpp  EventBus.hpp  KeyPressEvent.hpp  KeyReleaseEvent.hpp  ScreenTransformationEvent.hpp  TextWriteEvent.hpp  WindowCloseEvent.hpp
include/MPGL/Exceptions/: CircularListEmptyException.hpp  DifferentPlanesException.hpp  DifferentPlanesException.tpp  ExecusionUnknownPolicyException.hpp  FontNoRegularException.hpp  FramedWindowCompileException.hpp  GZSLFileCorruptionException.hpp  HuffmanTreeEmptyMapException.hpp  HuffmanTreeUnknownToken.hpp  ImageLoadingException.hpp  ImageLoadingFileCorruptionException.hpp  ImageLoadingFileOpenException.hpp  ImageLoadingInvalidTypeException.hpp  ImageLoadingUnsuportedFileType.hpp  InflateDataCorruptionException.hpp  InflateInvalidHeaderException.hpp  MPGLException.hpp  NotPerpendicularException.hpp  NotPerpendicularException.tpp  NotSupportedException.hpp  SLGZFileCorruptionException.hpp  SafeIteratorOutOfRangeException.hpp  SecurityUnknownPolicyException.hpp  ShaderCompilationException.hpp  ShaderLibraryInvalidShadersException.hpp  ShaderLocationException.hpp  ShaderLocationInvalidProgramException.hpp  ShaderLocationUniformException.hpp  ShaderProgramLinkingException.hpp  StackedExceptions.hpp  StackedExceptions.tpp  TTFLoaderFileCorruptionException.hpp  WindowGladException.hpp  WindowInvalidArgsException.hpp
include/MPGL/IO/: FileIO.hpp  MathTypesIO.hpp  MathTypesIO.tpp  Readers.hpp  Readers.tpp
include/MPGL/Iterators/: AccessRegisteringIterator.hpp  AccessRegisteringIterator.tpp  BitIterator.hpp  BitIterator.tpp  SafeIterator.hpp  SafeIterator.tpp  VertexViewIterator.hpp
include/MPGL/Mathematics/: FFT.hpp  FFT.tpp  FastFunctions.hpp  FastFunctions.tpp  IFCT.hpp  IFCT.tpp  Matrix.hpp  Matrix.tpp  Ranges.hpp  Ranges.tpp  Systems.hpp  Systems.ipp  Systems.tpp  Vector.hpp  Vector.tpp
include/MPGL/Traits/: Concepts.hpp  DeriveIf.hpp  IndexSequence.hpp  IndexSequence.tpp  TemplateString.hpp  TemplateString.tpp  Traits.hpp  TupleTraits.hpp  TupleTraits.tpp  Types.hpp
include/MPGL/Utility/: Adapter.hpp  Adapter.tpp  BitReversion.hpp  BitReversion.tpp  DelegatePointer.hpp  DelegationWrapper.hpp  DelegationWrapper.tpp  FixedRange.hpp  FunctionalWrapper.hpp  FunctionalWrapper.tpp  Polymorpher.hpp  Polymorpher.tpp  Ranges.hpp  Ranges.tpp  Security.hpp  StringAlgorithm.hpp  ZigZacRange.hpp  ZigZacRange.tpp
shaders/: shaders.si
shaders/Fragment/: 2DCTEllipse.glsl  2DCTRing.glsl  2DCTexture.glsl  2DCTextureConv.glsl  2DDefault.glsl  2DEllipse.glsl  2DGlyph.glsl  2DMonoGlyph.glsl  2DPoliGlyph.glsl  2DRing.glsl  2DTEllipse.glsl  2DTEllipseConv.glsl  2DTRing.glsl  2DTexture.glsl
shaders/Vertex/: 2DCTexture.glsl  2DDefault.glsl  2DEllipse.glsl  2DGlyph.glsl  2DMonoGlyph.glsl  2DPoliGlyph.glsl  2DTEllipse.glsl  2DTexture.glsl
src/: main.cpp
src/Engine/: 2DGraphics.hpp
src/Engine/Collections/: BitIterator.hpp  Bitmap.hpp  Canva.hpp  CircularList.hpp  Image.cpp  Image.hpp  MinHeap.hpp  SafeIterator.hpp  ThreadsafeQueue.hpp
src/Engine/Compression/: DeflateDecoder.cpp  DeflateDecoder.hpp  GZIPDecoder.hpp  HuffmanTree.hpp  IDCT.hpp  Inflate.cpp  Inflate.hpp  ZlibDecoder.hpp
src/Engine/Concurrency/: Monitor.hpp  QueueMonitor.hpp  Threadpool.cpp  Threadpool.hpp
src/Engine/Core/: Color.hpp  Context.cpp  Context.hpp  Drawable.hpp  DrawableCollection.hpp  DrawableTraits.hpp  RenderWindow.cpp  RenderWindow.hpp  Shape.cpp  Shape.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  TextureLoaderExp.cpp  TextureLoaderExp.hpp  TexturePack.cpp  TexturePack.hpp  Window.cpp  Window.hpp  WindowInterface.cpp  WindowInterface.hpp
src/Engine/Events/: Event.hpp  EventBus.hpp  KeyPressEvent.hpp  KeyReleaseEvent.hpp  MouseMotionEvent.hpp  MousePressEvent.hpp  MouseReleaseEvent.hpp  OnClickEvent.hpp  OnKeyPressedEvent.hpp  OnTextWrittenEvent.hpp  ScreenTransformationEvent.hpp  ScrollEvent.hpp  TextWriteEvent.hpp  TickEvent.hpp  WindowCloseEvent.hpp
src/Engine/Exceptions/: CircularListEmptyException.hpp  DeflateDecoderDataCorruptionException.hpp  DeflateDecoderException.hpp  DeflateDecoderInvalidHeaderException.hpp  ExecusionUnknownPolicyException.hpp  FontNoRegularException.hpp  FramedWindowCompileException.hpp  HuffmanTreeDecoderException.hpp  HuffmanTreeEmptyMapException.hpp  HuffmanTreeException.hpp  HuffmanTreeUnknownToken.hpp  ImageLoadingException.hpp  ImageLoadingFileCorruptionException.hpp  ImageLoadingFileException.hpp  ImageLoadingFileOpenException.hpp  ImageLoadingInvalidTypeException.hpp  ImageLoadingUnsuportedFileType.hpp  InflateDataCorruptionException.hpp  InflateException.hpp  InflateInvalidHeaderException.hpp  MPGLException.hpp  NotSupportedException.hpp  OptionsNoAntiAliasingSamplesException.hpp  RenderWindowException.hpp  RenderWindowGladException.hpp  RenderWindowInitException.hpp  RenderWindowInvalidArgsException.hpp  SafeIteratorOutOfRangeException.hpp  (+12 more)
tests/: test.cpp
tests/CollectionTests/: CircularListTests.hpp  CollectionTests.cpp
tests/TestsFramework/: Compare.hpp  Macros.hpp  Tester.cpp  Tester.hpp  Tests.hpp
(+655 files in other folders)
